--- a/entrega_1/code/clean_data.ipynb
+++ b/entrega_1/code/clean_data.ipynb
@@ -141,38 +141,38 @@
     {
      "data": {
       "text/plain": [
-       "id                  0\n",
-       "age                 0\n",
-       "gender              0\n",
-       "education           0\n",
-       "country             0\n",
-       "ethnicity           0\n",
-       "n_score             0\n",
-       "e_score             0\n",
-       "o_score             0\n",
-       "a_score             0\n",
-       "c_score             0\n",
-       "impulsive           0\n",
-       "sensation_seeing    0\n",
-       "alcohol             0\n",
-       "amphet              0\n",
-       "amyl                0\n",
-       "benzos              0\n",
-       "caffeine            0\n",
-       "cannabis            0\n",
-       "chocolate           0\n",
-       "cocaine             0\n",
-       "crack               0\n",
-       "ecstasy             0\n",
-       "heroin              0\n",
-       "ketamine            0\n",
-       "legal_highs         0\n",
-       "lsd                 0\n",
-       "methadone           0\n",
-       "mushrooms           0\n",
-       "nicotine            0\n",
-       "semer               0\n",
-       "vsa                 0\n",
+       "id                   0\n",
+       "age                  0\n",
+       "gender               0\n",
+       "education            0\n",
+       "country              0\n",
+       "ethnicity            0\n",
+       "n_score              0\n",
+       "e_score              0\n",
+       "o_score              0\n",
+       "a_score              0\n",
+       "c_score              0\n",
+       "impulsive            0\n",
+       "sensation_seeking    0\n",
+       "alcohol              0\n",
+       "amphet               0\n",
+       "amyl                 0\n",
+       "benzos               0\n",
+       "caffeine             0\n",
+       "cannabis             0\n",
+       "chocolate            0\n",
+       "cocaine              0\n",
+       "crack                0\n",
+       "ecstasy              0\n",
+       "heroin               0\n",
+       "ketamine             0\n",
+       "legal_highs          0\n",
+       "lsd                  0\n",
+       "methadone            0\n",
+       "mushrooms            0\n",
+       "nicotine             0\n",
+       "semer                0\n",
+       "vsa                  0\n",
        "dtype: int64"
       ]
      },
@@ -203,38 +203,38 @@
     {
      "data": {
       "text/plain": [
-       "id                    int64\n",
-       "age                  object\n",
-       "gender               object\n",
-       "education            object\n",
-       "country              object\n",
-       "ethnicity            object\n",
-       "n_score             float64\n",
-       "e_score             float64\n",
-       "o_score             float64\n",
-       "a_score             float64\n",
-       "c_score             float64\n",
-       "impulsive           float64\n",
-       "sensation_seeing    float64\n",
-       "alcohol              object\n",
-       "amphet               object\n",
-       "amyl                 object\n",
-       "benzos               object\n",
-       "caffeine             object\n",
-       "cannabis             object\n",
-       "chocolate            object\n",
-       "cocaine              object\n",
-       "crack                object\n",
-       "ecstasy              object\n",
-       "heroin               object\n",
-       "ketamine             object\n",
-       "legal_highs          object\n",
-       "lsd                  object\n",
-       "methadone            object\n",
-       "mushrooms            object\n",
-       "nicotine             object\n",
-       "semer                object\n",
-       "vsa                  object\n",
+       "id                     int64\n",
+       "age                   object\n",
+       "gender                object\n",
+       "education             object\n",
+       "country               object\n",
+       "ethnicity             object\n",
+       "n_score              float64\n",
+       "e_score              float64\n",
+       "o_score              float64\n",
+       "a_score              float64\n",
+       "c_score              float64\n",
+       "impulsive            float64\n",
+       "sensation_seeking    float64\n",
+       "alcohol               object\n",
+       "amphet                object\n",
+       "amyl                  object\n",
+       "benzos                object\n",
+       "caffeine              object\n",
+       "cannabis              object\n",
+       "chocolate             object\n",
+       "cocaine               object\n",
+       "crack                 object\n",
+       "ecstasy               object\n",
+       "heroin                object\n",
+       "ketamine              object\n",
+       "legal_highs           object\n",
+       "lsd                   object\n",
+       "methadone             object\n",
+       "mushrooms             object\n",
+       "nicotine              object\n",
+       "semer                 object\n",
+       "vsa                   object\n",
        "dtype: object"
       ]
      },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "46571ebc",
    "metadata": {},
    "outputs": [
@@ -447,11 +447,6 @@
        "      <th></th>\n",
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>age</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -491,7 +486,6 @@
       ],
       "text/plain": [
        "       n_registros  porcentaje\n",
-       "age                           \n",
        "18-24          637   33.937134\n",
        "25-34          480   25.572722\n",
        "35-44          355   18.913159\n",
@@ -500,7 +494,7 @@
        "65+             18    0.958977"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "dea24fbe",
    "metadata": {},
    "outputs": [],
@@ -539,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7f0156fd",
    "metadata": {
     "scrolled": true
@@ -569,11 +563,6 @@
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -592,12 +581,11 @@
       ],
       "text/plain": [
        "        n_registros  porcentaje\n",
-       "gender                         \n",
        "Male            940   50.079915\n",
        "Female          937   49.920085"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c22a38f8",
    "metadata": {
     "scrolled": true
@@ -655,11 +643,6 @@
        "      <th></th>\n",
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>education</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -714,7 +697,6 @@
       ],
       "text/plain": [
        "                                                    n_registros  porcentaje\n",
-       "education                                                                  \n",
        "Some college or university, no certificate or d...          503   26.798082\n",
        "University degree                                           478   25.466169\n",
        "Masters degree                                              283   15.077251\n",
@@ -726,7 +708,7 @@
        "Left school before 16 years                                  28    1.491742"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "92ed8f22",
    "metadata": {},
    "outputs": [],
@@ -765,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8ca95426",
    "metadata": {},
    "outputs": [
@@ -792,11 +774,6 @@
        "      <th></th>\n",
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>country</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -841,7 +818,6 @@
       ],
       "text/plain": [
        "                     n_registros  porcentaje\n",
-       "country                                     \n",
        "UK                          1044   55.620671\n",
        "USA                          551   29.355354\n",
        "Other                        118    6.286628\n",
@@ -851,7 +827,7 @@
        "New Zealand                    5    0.266383"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "aa34e5b2",
    "metadata": {},
    "outputs": [],
@@ -891,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "3a117de7",
    "metadata": {},
    "outputs": [
@@ -918,11 +894,6 @@
        "      <th></th>\n",
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ethnicity</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -967,7 +938,6 @@
       ],
       "text/plain": [
        "                   n_registros  porcentaje\n",
-       "ethnicity                                 \n",
        "White                     1715   91.369206\n",
        "Other                       62    3.303143\n",
        "Black                       33    1.758125\n",
@@ -977,7 +947,7 @@
        "Mixed-Black/Asian            3    0.159830"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "62922914",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "c224e767",
    "metadata": {},
    "outputs": [],
@@ -1045,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "184c5e0b",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "0bac66a5",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "6140af3e",
    "metadata": {},
    "outputs": [],
@@ -1102,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "e64ad1da",
    "metadata": {
     "scrolled": true
@@ -1129,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
