--- a/entrega_1/code/clean_data.ipynb
+++ b/entrega_1/code/clean_data.ipynb
@@ -448,6 +448,11 @@
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -486,6 +491,7 @@
       ],
       "text/plain": [
        "       n_registros  porcentaje\n",
+       "age                           \n",
        "18-24          637   33.937134\n",
        "25-34          480   25.572722\n",
        "35-44          355   18.913159\n",
@@ -563,6 +569,11 @@
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -581,6 +592,7 @@
       ],
       "text/plain": [
        "        n_registros  porcentaje\n",
+       "gender                         \n",
        "Male            940   50.079915\n",
        "Female          937   49.920085"
       ]
@@ -644,6 +656,11 @@
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>education</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -697,6 +714,7 @@
       ],
       "text/plain": [
        "                                                    n_registros  porcentaje\n",
+       "education                                                                  \n",
        "Some college or university, no certificate or d...          503   26.798082\n",
        "University degree                                           478   25.466169\n",
        "Masters degree                                              283   15.077251\n",
@@ -775,6 +793,11 @@
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -818,6 +841,7 @@
       ],
       "text/plain": [
        "                     n_registros  porcentaje\n",
+       "country                                     \n",
        "UK                          1044   55.620671\n",
        "USA                          551   29.355354\n",
        "Other                        118    6.286628\n",
@@ -895,6 +919,11 @@
        "      <th>n_registros</th>\n",
        "      <th>porcentaje</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
@@ -938,6 +967,7 @@
       ],
       "text/plain": [
        "                   n_registros  porcentaje\n",
+       "ethnicity                                 \n",
        "White                     1715   91.369206\n",
        "Other                       62    3.303143\n",
        "Black                       33    1.758125\n",
@@ -1099,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
